--- a/index.html
+++ b/index.html
@@ -32,14 +32,17 @@
 
         function drawmap() {
             // Popup und Popuptext mit evtl. Grafik
-            var popuptext = "<font color=\"black\"><b>Barttacke</b><p><img src=\"img/barttacke.jpg\" width=\"50\" height=\"50\"></p></font>";
+            var popupbarttacke = "<font color=\"black\"><b>Barttacke</b><p><img src=\"img/barttacke.jpg\" width=\"50\" height=\"50\"></p></font>";
+
+            var popupmopat = "<font color=\"red\"><b>Mopat</b><p><img src=\"img/mopat.jpg\" width=\"50\" height=\"50\"></p></font>";
+
 
             OpenLayers.Lang.setCode('de');
 
             // Position und Zoomstufe der Karte
             var lon = 12.101631;
             var lat = 49.0134074;
-            var zoom = 7;
+            var zoom = 10;
 
             map = new OpenLayers.Map('map', {
                 projection: new OpenLayers.Projection("EPSG:900913"),
@@ -65,7 +68,11 @@
             jumpTo(lon, lat, zoom);
 
             // Position des Markers
-            addMarker(layer_markers, 12.101631, 49.0134074, popuptext);
+            addMarker(layer_markers, 12.101631, 49.0134074, popupbarttacke);
+            addMarker(layer_markers, 12.5801538, 48.8777333, popupmopat);
+
+
+
 
         }
 
@@ -82,6 +89,7 @@
         <a href="http://creativecommons.org/licenses/by-sa/2.0/deed.de">CC-BY-SA</a>
     </div>
 </div>
+
 <div id="map">
 </div>
 
