--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="css/openstreetmap/map.css"/>
     <!--[if IE]>
     <link rel="stylesheet" type="text/css" href="css/openstreetmap/ie_map.css"/>
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <![endif]-->
     <script type="text/javascript" src="http://www.openlayers.org/api/OpenLayers.js"></script>
     <script type="text/javascript" src="http://www.openstreetmap.org/openlayers/OpenStreetMap.js"></script>
@@ -22,65 +23,8 @@
     <script src="js/vendor/modernizr.js"></script>
 
 
-    <script type="text/javascript">
-        //<![CDATA[
-
-        var map;
-        var layer_mapnik;
-        var layer_tah;
-        var layer_markers;
-
-        function drawmap() {
-            // Popup und Popuptext mit evtl. Grafik
-            var popupbarttacke = "<font color=\"black\"><b>Barttacke</b><p><img src=\"img/barttacke.jpg\" width=\"50\" height=\"50\"></p></font>";
-
-            var popupmopat = "<font color=\"red\"><b>Mopat</b><p><img src=\"img/mopat.jpg\" width=\"50\" height=\"50\"></p></font>";
-
-
-            OpenLayers.Lang.setCode('de');
-
-            // Position und Zoomstufe der Karte
-            var lon = 12.101631;
-            var lat = 49.0134074;
-            var zoom = 10;
-
-            map = new OpenLayers.Map('map', {
-                projection: new OpenLayers.Projection("EPSG:900913"),
-                displayProjection: new OpenLayers.Projection("EPSG:4326"),
-                controls: [
-                    new OpenLayers.Control.Navigation(),
-                    new OpenLayers.Control.LayerSwitcher(),
-                    new OpenLayers.Control.PanZoomBar()],
-                maxExtent: new OpenLayers.Bounds(-20037508.34, -20037508.34,
-                        20037508.34, 20037508.34),
-                numZoomLevels: 18,
-                maxResolution: 156543,
-                units: 'meters'
-            });
-
-            layer_mapnik = new OpenLayers.Layer.OSM.Mapnik("Mapnik");
-            layer_markers = new OpenLayers.Layer.Markers("Address", {
-                projection: new OpenLayers.Projection("EPSG:4326"),
-                visibility: true, displayInLayerSwitcher: false
-            });
-
-            map.addLayers([layer_mapnik, layer_markers]);
-            jumpTo(lon, lat, zoom);
-
-            // Position des Markers
-            addMarker(layer_markers, 12.101631, 49.0134074, popupbarttacke);
-            addMarker(layer_markers, 12.5801538, 48.8777333, popupmopat);
-
-
-
-
-        }
-
-        //]]>
-    </script>
-
 </head>
-<body onload="drawmap();">
+<body>
 
 <div id="header">
     <div id="content">Karte (Testversion)</div>
@@ -90,12 +34,28 @@
     </div>
 </div>
 
+
 <div id="map">
 </div>
+<div id="menu-right">
+    <div id="menu-items">
+        <div class="menu-item">
 
+        </div>
+    </div>
+    <ul id="menu-list">
+        <li>a</li>
+        <li>a</li>
+        <li>a</li>
+        <li>a</li>
+        <li>a</li>
+        <li>a</li>
+    </ul>
+</div>
 
 <script src="js/vendor/jquery.js"></script>
 <script src="js/foundation.min.js"></script>
+<script src="js/drawmap.js"></script>
 
 <script type="text/javascript" src="src/index/NewsMap.js"></script>
 <script type="text/javascript" src="src/index/MainController.js"></script>
@@ -107,6 +67,18 @@
     $(document).foundation();
     $(function () {
         NewsMap.init();
+    });
+    $(document).ready(function () {
+        drawmap();
+        addMyMarkers();
+        $("#menu-list li").on("click", function(){
+            if($("#menu-items").is(":visible")){
+                $("#menu-items").hide();
+            }
+            else{
+                $("#menu-items").show();
+            }
+        });
     });
 </script>
 </body>
