Location.js eigener Standort wird beim Seitenaufruf ermittelt und in einem Alert die Geodaten angezeigt

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         und <a href="http://www.openstreetmap.org/copyright">Mitwirkende</a>,
         <a href="http://creativecommons.org/licenses/by-sa/2.0/deed.de">CC-BY-SA</a>
     </div>
+
 </div>
 
 
@@ -44,7 +45,7 @@
         </div>
     </div>
     <ul id="menu-list">
-        <li>a</li>
+        <li><a href="#" class="button" id="button-find-location">Finde mich!</a></li>
         <li>a</li>
         <li>a</li>
         <li>a</li>
@@ -53,14 +54,17 @@
     </ul>
 </div>
 
+
 <script src="js/vendor/jquery.js"></script>
 <script src="js/foundation.min.js"></script>
 <script src="js/drawmap.js"></script>
+
 
 <script type="text/javascript" src="src/index/NewsMap.js"></script>
 <script type="text/javascript" src="src/index/MainController.js"></script>
 <script type="text/javascript" src="src/index/NewsMapModal.js"></script>
 <script type="text/javascript" src="src/index/NewsMapView.js"></script>
+<script type="text/javascript" src="src/index/Location.js"></script>
 
 
 <script>
