eigener Standort wird beim Seitenaufruf ermittelt und in einem Alert die Geodaten angezeigt

--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
 <script src="js/foundation.min.js"></script>
 <script src="js/drawmap.js"></script>
 
+<script type="text/javascript" src="src/index/Location.js"></script>
+
 <script type="text/javascript" src="src/index/NewsMap.js"></script>
 <script type="text/javascript" src="src/index/MainController.js"></script>
 <script type="text/javascript" src="src/index/NewsMapModal.js"></script>
