--- a/index.html
+++ b/index.html
@@ -34,6 +34,28 @@
 <div id="map">
 </div>
 
+<div id="location-start" class="text-center">
+    <div class="row">
+        <div class="small-12 columns">
+            <button id="identify-location">Eigenen Standort ermitteln</button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="small-12 columns">
+            <span class="text-center">oder</span>
+        </div>
+    </div>
+    <div class="row">
+        <div class="small-12 columns">
+            <input type="text" placeholder="Ort/PLZ/Region">
+        </div>
+    </div>
+
+    <br>
+
+    <br>
+
+</div>
 <div id="menu-right">
     <div id="menu-items">
         <div id="close-menu"><i class="fi-x"></i></div>
