--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
         closeMenuClick();
         popupClick();
         previewClose();
+        closeLocationFinder();
     });
 </script>
 </body>
