- anfang location zentriert

--- a/index.html
+++ b/index.html
@@ -45,16 +45,18 @@
             <span class="text-center">oder</span>
         </div>
     </div>
-    <div class="row">
-        <div class="small-12 columns">
-            <input type="text" placeholder="Ort/PLZ/Region">
+    <br>
+
+    <div class="row" id="location-start-wrapper">
+        <div class="postfix-round row collapse">
+            <div class="small-9 columns">
+                <input type="text" placeholder="Ort/PLZ/Region">
+            </div>
+            <div class="small-3 columns">
+                <a href="#" id="location-start-search" class="button postfix"><i class="fi-magnifying-glass"></i></a>
+            </div>
         </div>
     </div>
-
-    <br>
-
-    <br>
-
 </div>
 <div id="menu-right">
     <div id="menu-items">
@@ -104,8 +106,8 @@
     </div>
 
     <button id="read-more-button"><a class="more-link"
-               href="http://lokalreporter.idvl.de/wegen-einer-personalversammlung-ist-das-landratsamt-bamberg-am-mittwoch-16-dezember-2015-ab-1300-uhr-geschlossen-41413/"
-               rel="bookmark">Weiterlesen</a></button>
+                                     href="http://lokalreporter.idvl.de/wegen-einer-personalversammlung-ist-das-landratsamt-bamberg-am-mittwoch-16-dezember-2015-ab-1300-uhr-geschlossen-41413/"
+                                     rel="bookmark">Weiterlesen</a></button>
 </article>
 
 <script src="js/vendor/jquery.js"></script>
