Location Finder verschwindet bei klick auf Standort ermitteln,bei Klick auf Lupe oder bei Eingabe und Enter

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <div class="row" id="location-start-wrapper">
         <div class="postfix-round row collapse">
-            <div class="small-9 columns">
+            <div id="location-input" class="small-9 columns">
                 <input type="text" placeholder="Ort/PLZ/Region">
             </div>
             <div class="small-3 columns">
