--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta http-equiv="content-language" content="de"/>
     <meta name="author" content="Thomas Heiles"/>
     <link rel="stylesheet" type="text/css" href="css/openstreetmap/map.css"/>
+
     <!--[if IE]>
     <link rel="stylesheet" type="text/css" href="css/openstreetmap/ie_map.css"/>
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
@@ -22,7 +23,8 @@
     <link rel="stylesheet" href="css/foundation.css"/>
     <link rel="stylesheet" href="css/foundation-icons/foundation-icons.css"/>
     <script src="js/vendor/modernizr.js"></script>
-
+    <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css"/>
 
 </head>
 <body>
@@ -33,6 +35,7 @@
 
 <div id="map">
 </div>
+
 
 <div id="location-start" class="text-center">
     <div class="row">
@@ -108,8 +111,10 @@
                rel="bookmark">Weiterlesen</a></button>
 </article>
 
+
 <script src="js/vendor/jquery.js"></script>
 <script src="js/foundation.min.js"></script>
+
 <script src="js/drawmap.js"></script>
 
 <script type="text/javascript" src="src/index/Location.js"></script>
@@ -127,7 +132,7 @@
     });
     $(document).ready(function () {
         drawmap();
-        addMyMarkers();
+        //addMyMarkers();
         menuItemClick();
         closeMenuClick();
         popupClick();
