- zoom für autocomplete

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
         </div>
     </div>
     <br>
-
     <div id="location-start-wrapper">
         <div class="postfix-round row collapse" id="loc-start-margin">
             <div id="location-input" class="small-9 columns">
@@ -137,11 +136,7 @@
     });
     $(document).ready(function () {
         drawmap();
-        menuItemClick();
-        closeMenuClick();
-        popupClick();
-        previewClose();
-        closeLocationFinder();
+        autocomplete();
     });
 </script>
 </body>
