MVC umgesetzt! Eigenen Standort ermitteln und setzen funktioniert

--- a/index.html
+++ b/index.html
@@ -117,26 +117,16 @@
 <script src="js/vendor/jquery.js"></script>
 <script src="js/foundation.min.js"></script>
 
->
-
-<script type="text/javascript" src="src/index/drawmap.js"></script>
-
-<script type="text/javascript" src="src/index/Location.js"></script>
-
 <script type="text/javascript" src="src/index/NewsMap.js"></script>
 <script type="text/javascript" src="src/index/MainController.js"></script>
 <script type="text/javascript" src="src/index/NewsMapModal.js"></script>
 <script type="text/javascript" src="src/index/NewsMapView.js"></script>
-
+<script type="text/javascript" src="src/index/DrawMap.js"></script>
 
 <script>
     $(document).foundation();
     $(function () {
         NewsMap.init();
-    });
-    $(document).ready(function () {
-        drawmap();
-        autocomplete();
     });
 </script>
 </body>
