--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/foundation-icons/foundation-icons.css"/>
 
     <script src="js/vendor/modernizr.js"></script>
-    <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+    <script src="js/leaflet.js"></script>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css"/>
 
 </head>
@@ -152,12 +152,27 @@
                     var $title = $(this).find("title").text(),
                             $link = $(this).find("link").text(),
                             $pubDate = $(this).find("pubDate").text(),
-                            $content = $(this).find("encoded").text();
+                            $content = $(this).find("encoded").text(),
+                            $categories = [];
+                    $(this).find("category").each(function (i, el) {
+                        $categories.push($(el).text());
+                    });
+                    var $city;
+                    if ($categories.length > 1)
+                        $city = $categories[1];
+                    else $city = "none";
+
+                    /*
+                     Problem: Aufbau der Kategorien ist nicht immer gleich. haben verschieden Längen;
+                     indizes sind auch verschieden, also index 1 ist nicht immer ort, sondern auch kategorie etc.
+                     */
                     var newsData = {
                         title: $title,
                         link: $link,
                         pubData: $pubDate,
-                        content: $content
+                        content: $content,
+                        categories: $categories,
+                        city: $city
                     };
                     var newsDataObject = dataObject.createDataObject(newsData);
                     newsDataObjects.push(newsDataObject);
