Comment in Index gemacht

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 </head>
 <body>
 <script>
+
+    // Jo jetzt läuft das Ding endlich.. #ganzentagzumeinrichtengebraucht!
+
     getArticleByTitle();
     getArticleByLocation();
     getArticleByLocation();
