Comment in Index gemacht

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 </head>
 <body>
 <script>
-// 
-    // Jo jetzt läuft das Ding endlich.. #ganzentagzumeinrichtengebraucht!
+
+    // PUUUUSHHHHHH #warumgehtderscheissned
 
     getArticleByTitle();
     getArticleByLocation();
