Share Menü erstellt an Position von Left Menü. Ein/Ausblendbar durch Toggle bei Klick auf Share Symbol. Teilen Button gelöscht da Share Symbol selbsterklärend

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <li data-show="video"><i class="fi-video"></i></li>
         <li data-show="text"><i class="fi-clipboard-notes"></i></li>
         <li data-show="image"><i class="fi-puzzle"></i></li>
-        <li data-show="share"><i class="fi-share"></i></li>
+        <li data-show="share"><i class="fi-share" id="share-button"></i></li>
     </ul>
     <div class="menu-item" id="search-wrapper">
         <input type="text" id="tag-search-input">
@@ -152,9 +152,7 @@
     <div class="menu-item" id="image-wrapper">
         <button>kaa</button>
     </div>
-    <div class="menu-item" id="share-wrapper">
-        <button>Teilen</button>
-    </div>
+
 </div>
 <script></script>
 <!--<div id="menu-right">
@@ -214,6 +212,18 @@
     </ul>
 </div>-->
 <div id="map">
+</div>
+
+<div id="share-menu">
+
+    <button id="outlook-button">Outlook</button>
+     <br/>
+    <button id="link-button">Link kopieren</button>
+    <br/>
+    <button id="facebook-button">Facebook</button>
+    <br/>
+    <button id="twitter-button">Twitter</button>
+
 </div>
 
 <article id="menu-left">
