suche marker werden gesetzt

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
     // PUUUUSHHHHHH #warumgehtderscheissned
 
-    getArticleByTitle();
+    /*getArticleByTitle();
     getArticleByLocation();
-    getArticleByLocation();
+    getArticleByLocation();*/
 
     /*
      fur parameter tag, title oder location den wert des input felds mitgeben;
@@ -91,7 +91,7 @@
                     console.log("Keine Ergebnisse");
                 }
                 else
-                    console.log("LOCATION-SUCHE: SQL-AJAX-Ergebnisse", JSON.parse(data));
+                    console.log("LOCATION-SUCHE: SQL-AJAX-Ergebnisse", data);
             },
             error: function () {
                 alert("error");
