Email müsste jetzt funktionieren outlook öffnen und den letzt angeklickten Artikel link im body der email setzen

--- a/index.html
+++ b/index.html
@@ -161,8 +161,12 @@
 
 <div id="share-menu">
 
-    <button id="outlook-button">Outlook</button>
+
+  <!--  <a class="button" id="mailButton" href="javascript:NewsMap.DrawMap.setUpEmailLink()" target="_blank"> Mail</a>
+  -->
+    <a class="button" id="mailButton" href="mailto:blala@bla.de" target="_blank"> Mail</a>
     <br/>
+
     <button id="link-button">Link kopieren</button>
     <br/>
 
