onClick auf Share Button korrigiert. Lag vorher nur auf Share symbol nicht listenelement

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <li data-show="video"><i class="fi-video"></i></li>
         <li data-show="text"><i class="fi-clipboard-notes"></i></li>
         <li data-show="image"><i class="fi-puzzle"></i></li>
-        <li data-show="share"><i class="fi-share" id="share-button"></i></li>
+        <li data-show="share" id="share-button"><i class="fi-share"></i></li>
     </ul>
     <div class="menu-item" id="search-wrapper">
         <div class="row">
