Twitter Button funktioniert

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     <a class="button" href="javascript:NewsMap.DrawMap.fbshareCurrentPage()" target="_blank" alt="Share on Facebook">Facebook</a>
 
     <br/>
-    <button id="twitter-button">Twitter</button>
+    <a class="button" id="twitter-button" href="javascript:NewsMap.DrawMap.twitterCurrentArticle()" target="_blank" alt="Share on Twitter">Twitter</a>
 
 </div>
 
