--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 
 </head>
 <body>
+<div class="text-center" id="loading">
+    <span>Lade Nachrichten...</span>
+</div>
 <script>
 
     // PUUUUSHHHHHH #warumgehtderscheissned
